styles/blogpost.scss
.main-article {
	padding-bottom: 10rem;

	h1 {
		font-weight: 900;
		text-align: center;
		font-size: 5rem;
		margin-bottom: 1.6rem;
		color: var(--accent-color);
	}

	h2 {
		font-weight: 800;
		font-size: 3.4rem;
		margin: 5rem 0 0 1rem;
	}

	h3 {
		margin-top: 3rem;
		font-weight: 900;
		padding-left: 1rem;
	}

	ul,
	ol {
		margin-left: 3rem;
		margin-top: 2rem;
		::marker {
			color: var(--accent-color);
			font-weight: 600;
		}
	}

	ol {
		::marker {
			font-size: 1.6rem;
		}
	}

	ul {
		::marker {
			content: "•";
			font-size: 2rem;
		}
	}

	li {
		font-size: 1.8rem;
		padding-left: 1rem;
		font-weight: var(--paragraph-weight);
		margin-top: 2rem;
	}

	p {
		margin-top: 1.4rem;
		padding: 0 1rem;
	}

	a {
		display: inline-block;
	}

	strong {
		color: var(--text-color-bold);
		font-weight: 600;
	}

	em {
		font-family: Arial, Helvetica, sans-serif;
		color: var(--accent-color);
		letter-spacing: 0.05rem;
	}

	blockquote {
		background: var(--light-bg);
		border-left: 5px solid var(--link-highlight);
		margin-top: 2rem;
		padding: 1.5rem 0;
		border-radius: 3px;

		p {
			margin-top: 0;
		}
	}

	.blog-link {
		color: var(--accent-color);
		border-bottom: 2px solid var(--accent-color);
		padding: 0 0.1rem;
		line-height: 2.2rem;

		&:hover {
			color: var(--link-highlight);
			border-color: var(--link-highlight);
		}
	}

	.image-container {
		width: 100%;
		position: relative;
		border-radius: 10px;
		overflow: hidden;

		div {
			overflow: hidden;
			z-index: -1;
		}

		.placeholder-canvas {
			transition: opacity 0.5s ease;
			position: absolute;
			pointer-events: none;

			&.unblur {
				opacity: 0;
			}
		}
	}

	.image-credits {
		display: flex;
		justify-content: flex-end;
		font-size: 1.4rem;
		margin-top: 0.6rem;

		a {
			margin: 0 0.4rem;
			color: var(--accent-color);
			font-weight: 400;
		}
	}

	footer {
		margin-top: 15rem;
		display: flex;
		flex-direction: column;

		div {
			border-top: 1px solid var(--separator);
			display: flex;
			justify-content: flex-start;
			align-items: center;
			flex-wrap: wrap;
		}

		p {
			margin: 1rem 1rem 0 0;
			padding: 0;
			line-height: 3rem;
		}

		a {
			margin-left: 1rem;
			padding: 0.6rem 1.4rem;
			font-size: 1.8rem;
			border: none;
			color: var(--text-color);
			background: var(--opacity-bg);
			border-radius: 3px;

			&:hover {
				background: var(--accent-bg);
			}
		}

		.date {
			margin: 0 0 0.6rem auto;
			background: transparent;
			font-size: 1.6rem;
			padding: 0;
		}
	}

	kbd,
	.inline-code {
		display: inline-block;
		font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
			Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
		padding: 0 0.6rem 0.2rem 0.6rem;
		vertical-align: middle;
		background: var(--opacity-bg);
		font-size: 1.7rem;
		border-radius: 3px;
		font-weight: var(--bold-weight);
	}
}

.color-block {
	border-radius: 3px;
	width: 2.2rem;
	height: 2.2rem;
	display: inline-block;
	vertical-align: middle;

	&.light {
		background-color: #7646fd;
	}

	&.dark {
		background-color: #ffa7c4;
	}
}

